# HohmannHET

./: .gitignore  CONTRIBUTING.md  README.md  hohmann_transfer.cpp  hohmann_transfer.m  hohmann_transfer.py  unittest_hohmann_transfer  unittest_hohmann_transfer.cpp  unittest_hohmann_transfer.py
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/include/hohmann_het/: dynamics.hpp  optimization.hpp  propulsion.hpp
cpp/tests/: CMakeLists.txt  test_dynamics.cpp  test_optimization.cpp  test_propulsion.cpp
matlab/+hohmann_het/: Dynamics.m  Optimization.m  Propulsion.m
matlab/tests/: TestDynamics.m  TestOptimization.m  TestPropulsion.m
python/: pyproject.toml
python/src/hohmann_het/: __init__.py  dynamics.py  optimization.py  propulsion.py
python/tests/: __init__.py  test_dynamics.py  test_optimization.py  test_propulsion.py
