# Author: A Taylor | Purpose: Python package configuration | Ref: Vallado/Curtis
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hohmann-het"
version = "1.0.0"
description = "Tri-language low-thrust orbital transfer library: Keplerian dynamics, HET propulsion, and mission optimization."
authors = [{ name = "A Taylor" }]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "astropy>=5.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
vis = [
    "matplotlib>=3.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hohmann_het"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
